# STAR

./: .gitignore  README.md  application_data_spec.md  check_data.py  combine.py  consolidated_project.md  download_data.py  field_experiments.txt  pyproject.toml
src/: beauty_results.md  collaborative_relationships.py  data_debug.py  data_processing.py  data_quality.py  evaluation_metrics.py  item_embeddings_huggingface.py  item_embeddings_vertex_ai.py  main.py  model_analysis.py  optimized_collaborative_relationships.py  star_retrieval.py  temporal_utils.py  utils.py
src/v2_purchase/: README.md  collaborative_relationships_purchase.py  data_loading.py  data_spec.md  evaluation_metrics_purchase.py  main_purchase.py  star_retrieval_purchase.py
